add acknowledgments to yaml

--- a/DataSharing.bib
+++ b/DataSharing.bib
@@ -1,63 +1,122 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Shannon Ellis at 2017-02-21 15:59:20 -0500 
+%% Created for Shannon Ellis at 2017-08-25 13:12:16 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@techreport{broman_data_2017,
+	Abstract = {Spreadsheets are widely used software tools for data entry, storage, analysis, and visualization. Focusing on the data entry and storage aspects, this paper offers practical recommendations for organizing spreadsheet data to reduce errors and ease later analyses. The basic principles are: be consistent, write dates like YYYY-MM-DD, don't leave any cells empty, put just one thing in a cell, organize the data as a single rectangle (with subjects as rows and variables as columns, and with a single header row), create a data dictionary, don't include calculations in the raw data files, don't use font color or highlighting as data, choose good names for things, make backups, use data validation to avoid data entry errors, and save the data in plain text file.},
+	Author = {Broman, Karl W. and Woo, Kara H.},
+	Date-Added = {2017-08-25 17:12:13 +0000},
+	Date-Modified = {2017-08-25 17:12:13 +0000},
+	File = {Full Text PDF:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/VHDQ3GV5/Broman and Woo - 2017 - Data organization in spreadsheets.pdf:application/pdf;Snapshot:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/CH2UJ7KK/3183.html:text/html},
+	Institution = {PeerJ Preprints},
+	Language = {en},
+	Month = aug,
+	Note = {DOI: 10.7287/peerj.preprints.3183v1},
+	Number = {e3183v1},
+	Title = {Data organization in spreadsheets},
+	Url = {https://peerj.com/preprints/3183},
+	Urldate = {2017-08-25},
+	Year = {2017},
+	Bdsk-Url-1 = {https://peerj.com/preprints/3183}}
+
+@article{wilson_good_2017,
+	Abstract = {Author summary Computers are now essential in all branches of science, but most researchers are never taught the equivalent of basic lab skills for research computing. As a result, data can get lost, analyses can take much longer than necessary, and researchers are limited in how effectively they can work with software and data. Computing workflows need to follow the same practices as lab projects and notebooks, with organized data, documented steps, and the project structured for reproducibility, but researchers new to computing often don't know where to start. This paper presents a set of good computing practices that every researcher can adopt, regardless of their current level of computational skill. These practices, which encompass data management, programming, collaborating with colleagues, organizing projects, tracking work, and writing manuscripts, are drawn from a wide variety of published sources from our daily lives and from our work with volunteer organizations that have delivered workshops to over 11,000 people since 2010.},
+	Author = {Wilson, Greg and Bryan, Jennifer and Cranston, Karen and Kitzes, Justin and Nederbragt, Lex and Teal, Tracy K.},
+	Date-Added = {2017-08-23 17:30:22 +0000},
+	Date-Modified = {2017-08-23 17:30:22 +0000},
+	Doi = {10.1371/journal.pcbi.1005510},
+	File = {Full Text PDF:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/3FFUF3D7/Wilson et al. - 2017 - Good enough practices in scientific computing.pdf:application/pdf;Snapshot:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/SQAME5W8/article.html:text/html},
+	Issn = {1553-7358},
+	Journal = {PLOS Computational Biology},
+	Keywords = {Computer software, Control systems, Data management, Data processing, Programming languages, reproducibility, Software tools, Source code},
+	Month = jun,
+	Number = {6},
+	Pages = {e1005510},
+	Title = {Good enough practices in scientific computing},
+	Url = {http://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1005510},
+	Urldate = {2017-08-23},
+	Volume = {13},
+	Year = {2017},
+	Bdsk-Url-1 = {http://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1005510},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1371/journal.pcbi.1005510}}
+
+@article{wilson_best_2014,
+	Abstract = {We describe a set of best practices for scientific software development, based on research and experience, that will improve scientists' productivity and the reliability of their software.},
+	Author = {Wilson, Greg and Aruliah, D. A. and Brown, C. Titus and Hong, Neil P. Chue and Davis, Matt and Guy, Richard T. and Haddock, Steven H. D. and Huff, Kathryn D. and Mitchell, Ian M. and Plumbley, Mark D. and Waugh, Ben and White, Ethan P. and Wilson, Paul},
+	Date-Added = {2017-08-23 17:28:17 +0000},
+	Date-Modified = {2017-08-23 17:28:17 +0000},
+	Doi = {10.1371/journal.pbio.1001745},
+	File = {Full Text PDF:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/RCKEB67Q/Wilson et al. - 2014 - Best Practices for Scientific Computing.pdf:application/pdf;Snapshot:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/EFIQ8DPN/article.html:text/html},
+	Issn = {1545-7885},
+	Journal = {PLOS Biology},
+	Keywords = {Computers, Computer software, Open source software, Programming languages, Research validity, Scientists, Software development, Software tools},
+	Month = jan,
+	Number = {1},
+	Pages = {e1001745},
+	Title = {Best {Practices} for {Scientific} {Computing}},
+	Url = {http://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.1001745},
+	Urldate = {2017-08-23},
+	Volume = {12},
+	Year = {2014},
+	Bdsk-Url-1 = {http://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.1001745},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1371/journal.pbio.1001745}}
+
 @misc{woo_browman,
-	title = {Data organization in spreadsheets},
-	author = {Browman, Karl and Woo, Kara},
-	url = {https://github.com/dsscollection/data-org-spreadsheets},
-	abstract = {Contribute to data-org-spreadsheets development by creating an account on GitHub.},
-	urldate = {2017-06-01},
-	journal = {GitHub},
-	file = {Snapshot:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/JPA7MGWC/manuscript.html:text/html}
-}
+	Abstract = {Contribute to data-org-spreadsheets development by creating an account on GitHub.},
+	Author = {Browman, Karl and Woo, Kara},
+	File = {Snapshot:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/JPA7MGWC/manuscript.html:text/html},
+	Journal = {GitHub},
+	Title = {Data organization in spreadsheets},
+	Url = {https://github.com/dsscollection/data-org-spreadsheets},
+	Urldate = {2017-06-01},
+	Bdsk-Url-1 = {https://github.com/dsscollection/data-org-spreadsheets}}
 
 @misc{noauthor_json:_nodate,
-	title = {{JSON}: {The} {Fat}-{Free} {Alternative} to {XML}},
-	url = {http://www.json.org/xml.html},
-	urldate = {2017-05-31},
-	file = {JSON\: The Fat-Free Alternative to XML:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/ZMTK7MH9/xml.html:text/html}
-}
+	File = {JSON\: The Fat-Free Alternative to XML:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/ZMTK7MH9/xml.html:text/html},
+	Title = {{JSON}: {The} {Fat}-{Free} {Alternative} to {XML}},
+	Url = {http://www.json.org/xml.html},
+	Urldate = {2017-05-31},
+	Bdsk-Url-1 = {http://www.json.org/xml.html}}
 
 @misc{newman_date_nodate,
-	title = {Date and {Time} on the {Internet}: {Timestamps}},
-	shorttitle = {Date and {Time} on the {Internet}},
-	url = {https://tools.ietf.org/html/rfc3339.html},
-	urldate = {2017-05-31},
-	author = {Newman, Chris and Klyne, Graham},
-	file = {Snapshot:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/TESKZJGZ/rfc3339.html:text/html}
-}
+	Author = {Newman, Chris and Klyne, Graham},
+	File = {Snapshot:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/TESKZJGZ/rfc3339.html:text/html},
+	Shorttitle = {Date and {Time} on the {Internet}},
+	Title = {Date and {Time} on the {Internet}: {Timestamps}},
+	Url = {https://tools.ietf.org/html/rfc3339.html},
+	Urldate = {2017-05-31},
+	Bdsk-Url-1 = {https://tools.ietf.org/html/rfc3339.html}}
 
 @article{white_nine_2013,
-	title = {Nine simple ways to make it easier to (re)use your data},
-	volume = {6},
-	copyright = {Copyright (c) 2015 Ethan P White, Elita Baldridge, Zachary T. Brym, Kenneth J. Locey, Daniel J. McGlinn, Sarah R. Supp},
-	issn = {1918-3178},
-	url = {http://ojs.library.queensu.ca/index.php/IEE/article/view/4608},
-	abstract = {Sharing data is increasingly considered to be an important part of the scientific process. Making your data publicly available allows original results to be reproduced and new analyses to be conducted. While sharing your data is the first step in allowing reuse, it is also important that the data be easy to understand and use. We describe nine simple ways to make it easy to reuse the data that you share and also make it easier to work with it yourself. Our recommendations focus on making your data understandable, easy to analyze, and readily available to the wider community of scientists.},
-	language = {en},
-	number = {2},
-	urldate = {2017-05-11},
-	journal = {Ideas in Ecology and Evolution},
-	author = {White, Ethan P. and Baldridge, Elita and Brym, Zachary T. and Locey, Kenneth J. and McGlinn, Daniel J. and Supp, Sarah R.},
-	month = aug,
-	year = {2013},
-	keywords = {data, data reuse, data sharing, data structure},
-	file = {Full Text PDF:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/AQWSWRBH/White et al. - 2013 - Nine simple ways to make it easier to (re)use your.pdf:application/pdf;Snapshot:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/M4C4ABP7/0.html:text/html}
-}
-
+	Abstract = {Sharing data is increasingly considered to be an important part of the scientific process. Making your data publicly available allows original results to be reproduced and new analyses to be conducted. While sharing your data is the first step in allowing reuse, it is also important that the data be easy to understand and use. We describe nine simple ways to make it easy to reuse the data that you share and also make it easier to work with it yourself. Our recommendations focus on making your data understandable, easy to analyze, and readily available to the wider community of scientists.},
+	Author = {White, Ethan P. and Baldridge, Elita and Brym, Zachary T. and Locey, Kenneth J. and McGlinn, Daniel J. and Supp, Sarah R.},
+	Copyright = {Copyright (c) 2015 Ethan P White, Elita Baldridge, Zachary T. Brym, Kenneth J. Locey, Daniel J. McGlinn, Sarah R. Supp},
+	File = {Full Text PDF:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/AQWSWRBH/White et al. - 2013 - Nine simple ways to make it easier to (re)use your.pdf:application/pdf;Snapshot:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/M4C4ABP7/0.html:text/html},
+	Issn = {1918-3178},
+	Journal = {Ideas in Ecology and Evolution},
+	Keywords = {data, data reuse, data sharing, data structure},
+	Language = {en},
+	Month = aug,
+	Number = {2},
+	Title = {Nine simple ways to make it easier to (re)use your data},
+	Url = {http://ojs.library.queensu.ca/index.php/IEE/article/view/4608},
+	Urldate = {2017-05-11},
+	Volume = {6},
+	Year = {2013},
+	Bdsk-Url-1 = {http://ojs.library.queensu.ca/index.php/IEE/article/view/4608}}
 
 @misc{noauthor_twitter_nodate,
-	title = {Twitter},
-	url = {https://twitter.com/},
-	urldate = {2017-05-03},
-	file = {Twitter:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/UUJRBJCE/twitter.com.html:text/html}
-}
+	File = {Twitter:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/UUJRBJCE/twitter.com.html:text/html},
+	Title = {Twitter},
+	Url = {https://twitter.com/},
+	Urldate = {2017-05-03},
+	Bdsk-Url-1 = {https://twitter.com/}}
 
 @article{baggerly2010disclose,
 	Author = {Baggerly, Keith},
@@ -182,7 +241,6 @@ Douglas Crockford originally specified the JSON format in the early 2000s; two c
 	Urldate = {2017-02-21},
 	Year = {2017},
 	Bdsk-Url-1 = {https://en.wikipedia.org/w/index.php?title=JSON&oldid=766299361}}
-
 
 @misc{_twitter,
 	Date-Added = {2017-02-21 20:56:03 +0000},
